--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chromedriver": "^88.0.0",
     "cucumber": "^7.0.0-rc.0",
     "cucumber-html-reporter": "^5.3.0",
+    "cucumber-junit-convert": "^1.1.0",
     "fs-extra": "^9.1.0",
     "protractor": "^7.0.0",
     "protractor-cucumber-framework": "^6.2.1"
